HEAD
	+ Migrate previous configuration from 3.3 when upgrading
	+ Admin password change handled by AuthPAM
	+ Fix version available check in dashboard when file does not exist
	+ Do not show success note if there is no note
	+ Fix data in use behaviour on edition
	+ Give support to data in use exception for in-place booleans
	+ Fix warnOnChangeId framework
	+ Give real no support to /media in Disk Usage even when modules
	  use it
	+ Hide passwords on admin user model on error and debug on
	+ Set proper version for bugreport issues
3.4
	+ Do not launch exceptions on EBox::MyDBEngine DESTROY
	+ Ask for trace object to non-handled EBox::Exceptions::Base
	  exceptions in the UnhandledError middleware. This will gives us
	  useful stack traces.
	+ When requesting from type a non-existing value use acquirer
	  if it is a volatile type
	+ EBox::WebAdmin::addNginxInclude does not longer raises exception
	  if file not yet exists
	+ Improve post save modules algorithm
	+ Added local apparmor profile for mysqld
	+ Avoid to show two 'module not enabled' messages in composites
	+ All non external exceptions from normal requests are now shown
	  in the UI with the stack trace to report as a bug
	+ All non external exceptions from AJAX requests are now shown in
	  the UI with the stack trace to report as a bug
	+ Template exceptions in normal requests are now handled in webadmin
	+ Set templated files encoding to UTF-8
	+ Send Perl warnings to Zentyal log file in webadmin app
	+ Added keepFile parameter to EBox::Downloader::CGI::FromTempDir
	+ Remove idle and dead code from EBox::Module::Service::writeConfFile
	+ Added auditable property to EBox::Model::DataTable
	+ Added HAProxyPreSetConf to HaProxy::ServiceBase
	+ Moved management of webadmin certificate to HAProxy module
	+ Enable ReverseProxy middleware always
	+ MySQL is restarted before creating database
	+ Use root ownership for webadmin certificates